--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lis.Ai - Smart Digital Shopping Mall combining e-commerce and AI for personalized shopping experiences.">
+    <meta name="keywords" content="AI shopping, virtual try-on, visual search, e-commerce, fashion technology, artificial intelligence">
+    <meta name="author" content="Lis.Ai">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Lis.Ai - Smart Digital Shopping Mall">
+    <meta property="og:description" content="AI-powered smart digital shopping experience">
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png">
+    <meta property="og:url" content="https://luminousis.co">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://luminousis.co">
+
     <meta name="theme-color" content="#4417C1">
     <title>Lis.Ai - Smart Digital Shopping Mall</title>
 
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png">
+    <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/global.css">
+
+    <link rel="preload" href="%PUBLIC_URL%/fonts/poppins.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <div id="root"></div>
