--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lis.Ai - Smart Digital Shopping Mall combining e-commerce and AI for personalized shopping experiences.">
-    <meta name="keywords" content="AI shopping, virtual try-on, visual search, e-commerce, fashion technology, artificial intelligence">
-    <meta name="author" content="Lis.Ai">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lis.Ai - Smart Digital Shopping Mall">
-    <meta property="og:description" content="AI-powered smart digital shopping experience">
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png">
-    <meta property="og:url" content="https://luminousis.co">
+    <title>Lis AI | AI Powered Fashion Solutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Lis AI offers visual search, virtual fitting room and social media integrated into these features using advanced AI">
+    <meta name="keywords" content="virtual dressing room, virtual try-on for clothing, visual search for fashion, visual search for e-commerce, fashion technology, artificial intelligence, AI-powered fashion recommendations">
+    <meta name="author" content="Lis AI">
+    <meta name="robots" content="max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+    <meta property="og:title" content="Lis AI | AI Powered Fashion Solutions">
+    <meta property="og:description" content="Lis AI offers visual search, virtual fitting room and social media integrated into these features using advanced AI">
+    <meta property="og:image" content="%PUBLIC_URL%/static/media/5.2d0bacb3ef5be6deb8b7.webp">
+    <meta property="og:url" content="https://lisai.co">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Lis AI">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://luminousis.co">
-
-    <meta name="theme-color" content="#4417C1">
-    <title>Lis.Ai - Smart Digital Shopping Mall</title>
-
+    <link rel="canonical" href="https://lisai.co">
+    <meta name="theme-color" content="#f8f9fa">
     <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/svg+xml">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/global.css">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Lis AI",
+          "url": "https://lisai.co",
+          "description": "Platform offering visual search, virtual fitting room and artificial intelligence solutions for fashion and e-commerce.",
+          "sameAs": [
+            "https://x.com/lis_ai_co",
+            "https://www.linkedin.com/company/lis-ai",
+          ]
+        }
+    </script>
 
-    <link rel="preload" href="%PUBLIC_URL%/fonts/poppins.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVX96XF725"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HVX96XF725');
+    </script>
 </head>
 <body>
     <div id="root"></div>
