footer navigation bug fixed

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Designed and developed by Lis AI -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +18,7 @@
     <meta property="og:site_name" content="Lis AI">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://lisai.co">
-    <meta name="theme-color" content="#f8f9fa">
+    <meta name="theme-color" content="#4417C1">
     <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/global.css">
