Added cofounder cards

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="max-snippet:-1,max-image-preview:large,max-video-preview:-1">
     <meta property="og:title" content="Lis AI | AI Powered Fashion Solutions">
     <meta property="og:description" content="Lis AI offers visual search, virtual fitting room and social media integrated into these features using advanced AI">
-    <meta property="og:image" content="%PUBLIC_URL%/static/media/5.2d0bacb3ef5be6deb8b7.webp">
+    <meta property="og:image" content="%PUBLIC_URL%/6.webp">
     <meta property="og:url" content="https://lisai.co">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
@@ -20,6 +20,9 @@
     <link rel="canonical" href="https://lisai.co">
     <meta name="theme-color" content="#4417C1">
     <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="%PUBLIC_URL%/logo_bg.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo_bg.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/global.css">
     <script type="application/ld+json">
