--- a/public/404.html
+++ b/public/404.html
@@ -2,13 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
     <script>
       sessionStorage.redirect = location.href;
     </script>
     <meta http-equiv="refresh" content="0;URL='/'">
+    <style>
+      body {
+        background-color: #F1E6D8;
+        margin: 0;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    Redirecting...
   </body>
 </html>
